--- a/Meditator/Base.lproj/Main_iPad.storyboard
+++ b/Meditator/Base.lproj/Main_iPad.storyboard
@@ -13,15 +13,15 @@
                         <viewControllerLayoutGuide type="bottom" id="CAI-Pf-WHM"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="EJC-z6-cTF">
-                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <rect key="frame" x="0.0" y="64" width="768" height="960"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zwj-u6-6vH">
-                                <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="960"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHu-5s-2g5">
-                                        <rect key="frame" x="20" y="20" width="728" height="265"/>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHu-5s-2g5">
+                                        <rect key="frame" x="20" y="20" width="728" height="201"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -30,6 +30,7 @@
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                     </textView>
                                 </subviews>
                                 <constraints>
@@ -49,6 +50,7 @@
                             <constraint firstAttribute="trailing" secondItem="Zwj-u6-6vH" secondAttribute="trailing" id="nSP-6H-hZc"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Instructions" id="LV7-cj-MQF"/>
                     <connections>
                         <outlet property="instructionsTextView" destination="qHu-5s-2g5" id="1q9-tQ-D5h"/>
@@ -83,7 +85,7 @@
         <scene sceneID="Xwl-OM-cDz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cYy-CQ-jJ1" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Instructions" id="ziI-hA-dnW"/>
+                    <tabBarItem key="tabBarItem" title="Instructions" image="instructions" id="ziI-hA-dnW"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="m1c-Su-isA">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
@@ -286,6 +288,9 @@
             <point key="canvasLocation" x="-1246" y="2183"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="instructions" width="30" height="30"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
