--- a/Meditator/Base.lproj/Main_iPad.storyboard
+++ b/Meditator/Base.lproj/Main_iPad.storyboard
@@ -61,10 +61,10 @@
             </objects>
             <point key="canvasLocation" x="-272" y="-557"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Saved State Tab Bar Controller-->
         <scene sceneID="E1R-zh-Zy4">
             <objects>
-                <tabBarController definesPresentationContext="YES" id="rru-NU-qKI" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="rru-NU-qKI" customClass="SavedStateTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="fxI-VZ-GiP">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
