--- a/Meditator/Base.lproj/Main_iPhone.storyboard
+++ b/Meditator/Base.lproj/Main_iPhone.storyboard
@@ -4,10 +4,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Saved State Tab Bar Controller-->
         <scene sceneID="8M7-8y-aUT">
             <objects>
-                <tabBarController definesPresentationContext="YES" id="OeR-uG-8Gv" sceneMemberID="viewController">
+                <tabBarController definesPresentationContext="YES" id="OeR-uG-8Gv" customClass="SavedStateTabBarController" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="xZy-h1-DUe">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
