--- a/Meditator/Base.lproj/Main_iPad.storyboard
+++ b/Meditator/Base.lproj/Main_iPad.storyboard
@@ -21,7 +21,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qHu-5s-2g5">
-                                        <rect key="frame" x="20" y="20" width="728" height="201"/>
+                                        <rect key="frame" x="20" y="180" width="728" height="201"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
@@ -32,13 +32,23 @@
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         <dataDetectorType key="dataDetectorTypes" link="YES"/>
                                     </textView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ROB-mF-bov">
+                                        <rect key="frame" x="334" y="40" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="izS-jm-3cD"/>
+                                            <constraint firstAttribute="width" constant="100" id="wSF-mz-c1m"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="qHu-5s-2g5" firstAttribute="leading" secondItem="Zwj-u6-6vH" secondAttribute="leading" constant="20" symbolic="YES" id="Aqd-ya-fyK"/>
                                     <constraint firstAttribute="trailing" secondItem="qHu-5s-2g5" secondAttribute="trailing" constant="20" symbolic="YES" id="BaW-th-5Hh"/>
-                                    <constraint firstAttribute="bottom" secondItem="qHu-5s-2g5" secondAttribute="bottom" constant="20" symbolic="YES" id="V8K-It-EmZ"/>
-                                    <constraint firstItem="qHu-5s-2g5" firstAttribute="top" secondItem="Zwj-u6-6vH" secondAttribute="top" constant="20" symbolic="YES" id="fLh-LX-oS1"/>
+                                    <constraint firstItem="qHu-5s-2g5" firstAttribute="top" secondItem="ROB-mF-bov" secondAttribute="bottom" constant="40" id="GbR-CS-Fek"/>
+                                    <constraint firstAttribute="bottom" secondItem="qHu-5s-2g5" secondAttribute="bottom" constant="579" id="PQM-sb-9p9"/>
+                                    <constraint firstItem="ROB-mF-bov" firstAttribute="top" secondItem="Zwj-u6-6vH" secondAttribute="top" constant="40" id="jhO-h4-kab"/>
                                     <constraint firstItem="qHu-5s-2g5" firstAttribute="centerX" secondItem="Zwj-u6-6vH" secondAttribute="centerX" id="s0l-si-Yfq"/>
+                                    <constraint firstAttribute="centerX" secondItem="ROB-mF-bov" secondAttribute="centerX" id="uS6-NE-kg6"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
@@ -53,6 +63,7 @@
                     <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Instructions" id="LV7-cj-MQF"/>
                     <connections>
+                        <outlet property="imageView" destination="ROB-mF-bov" id="eG9-V3-GNL"/>
                         <outlet property="instructionsTextView" destination="qHu-5s-2g5" id="1q9-tQ-D5h"/>
                         <outlet property="textViewHeightConstraint" destination="AOZ-fM-lwO" id="SOd-Vb-Yqg"/>
                     </connections>
